--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab5Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Style="{DynamicResource WindowStyle}">
     <Window.CommandBindings>
         <CommandBinding Command="Open" Executed="MenuItem_Click"/>
         <CommandBinding Command="Save" Executed="MenuItem_Click1"/>
@@ -25,15 +25,15 @@
                 <MenuItem Header="_Выход"/>
             </MenuItem>
         </Menu>
-        <ToolBarTray Grid.Row="1">
+        <ToolBarTray Grid.Row="1" Style="{DynamicResource WindowStyle}">
             <ToolBar Margin="5" Padding="5">
-                <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged" ItemsSource="{StaticResource listFontName}"/>
+                <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged" ItemsSource="{StaticResource listFontName}" />
 
 
-                <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" SelectionChanged="ComboBox_SelectionChanged_1" ItemsSource="{StaticResource listFontSize}"/>
-                
+                <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" SelectionChanged="ComboBox_SelectionChanged_1" ItemsSource="{StaticResource listFontSize}" />
+
             </ToolBar>
-            <ToolBar Margin="5" Padding="5">
+            <ToolBar Margin="5" Padding="5" Style="{DynamicResource WindowStyle}">
                 <Button Height="40" Click="Button_Click">
                     <Image Source="/B.png"/>
                 </Button>
@@ -56,5 +56,6 @@
             </ToolBar>
         </ToolBarTray>
         <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontSize="16" FontFamily="Arial" TextWrapping="Wrap"/>
+        <ComboBox x:Name="styleBox" HorizontalAlignment="Left" Margin="644,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="120"/>
     </Grid>
 </Window>
