--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,10 +27,10 @@
         </Menu>
         <ToolBarTray Grid.Row="1" Style="{DynamicResource WindowStyle}">
             <ToolBar Margin="5" Padding="5">
-                <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged" ItemsSource="{StaticResource listFontName}" />
+                <ComboBox x:Name="FontNameComboBox" Margin="5" Padding="5" SelectedIndex="0" Width="200"  ItemsSource="{StaticResource listFontName}" />
 
 
-                <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" SelectionChanged="ComboBox_SelectionChanged_1" ItemsSource="{StaticResource listFontSize}" />
+                <ComboBox x:Name="FontSizeComboBox" Margin="5" Padding="5" SelectedIndex="2" Width="50"  ItemsSource="{StaticResource listFontSize}" />
 
             </ToolBar>
             <ToolBar Margin="5" Padding="5" Style="{DynamicResource WindowStyle}">
@@ -55,7 +55,7 @@
                 </StackPanel>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontSize="16" FontFamily="Arial" TextWrapping="Wrap"/>
+        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontSize="{Binding ElementName=FontSizeComboBox, Path=SelectedValue}" FontFamily="{Binding ElementName=FontNameComboBox, Path=SelectedValue}" TextWrapping="Wrap"/>
         <ComboBox x:Name="styleBox" HorizontalAlignment="Left" Margin="644,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="120"/>
     </Grid>
 </Window>
